kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/foo"
        pathType: Prefix
        backend:
          service:
            name: foo
            port:
              number: 80
      - path: "/bar"
        pathType: Prefix
        backend:
          service:
            name: bar
            port:
              number: 80
